--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "alkoscraper",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {},
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@playwright/test": "^1.47.2",
-    "@types/node": "^22.7.1"
-  }
+    "name": "alkoscraper",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "devDependencies": {
+        "@playwright/test": "^1.47.2",
+        "@types/node": "^22.7.1"
+    },
+    "dependencies": {
+        "express": "^4.21.0"
+    }
 }
