--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "@types/node": "^22.7.1"
     },
     "dependencies": {
-        "express": "^4.21.0"
+        "express": "^4.21.0",
+        "playwright": "^1.47.2",
+        "playwright-extra": "^4.3.6",
+        "puppeteer-extra-plugin-stealth": "^2.11.2"
     }
 }
