--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
         "playwright": "^1.47.2",
         "playwright-extra": "^4.3.6",
         "puppeteer-extra-plugin-stealth": "^2.11.2"
-    }
+    },
+    "type": "module"
 }
